Fix double border

--- a/src/chrome/os/winnt/browser.css
+++ b/src/chrome/os/winnt/browser.css
@@ -1,13 +1,5 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
-#navigator-toolbox::after {
-  content: "";
-  display: -moz-box;
-  -moz-box-ordinal-group: 101; /* tabs toolbar is 100 */
-  height: 1px;
-  background-color: var(--shadow-color);
-}
-
 #navigator-toolbox[tabsontop=false]::after,
 #main-window[disablechrome] #navigator-toolbox::after {
   visibility: collapse;
